@@ -1,5 +1,8 @@
 2011-04-13 Maxim
-- FIX:UI.Vision: Detecting the figures to be repainted is fixed for the properties dialog if the primitive ElFigure.
+- UI.Vision:  The default values detection is added to the properties dialog at its creation for the primitive ElFigure.
+
+2011-04-13 Maxim
+- FIX:UI.Vision: Detecting the figures to be repainted is fixed for the properties dialog for the primitive ElFigure.
 
 
 2011-04-13 Maxim
